Fix bug where label is not visible

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -165,6 +165,7 @@ textarea[readonly] {
   opacity: 0.5;
   -webkit-transition: opacity 0.25s;
   transition: opacity 0.25s;
+  z-index: 10;
 }
 
 .yaja-label:hover {
